tests/should_fail/match_struct_field_type_mismatch_char.nv
module fail
struct Point { x: Int, y: Int }
// Char literal in Int field — type mismatch
let p = Point(1, 2)
let r = match p {
    Point { x: 'a', y } => "bad",
    _ => "ok",
}
